==> ChibiOS/ChibiOS-Contrib/os/hal/ports/TIVA/LLD/I2C/hal_i2c_lld.c <==
#include "hal.h"
#define STATE_IDLE          0
#define STATE_WRITE_NEXT    1
#define STATE_WRITE_FINAL   2
#define STATE_WAIT_ACK      3
#define STATE_SEND_ACK      4
#define STATE_READ_ONE      5
#define STATE_READ_FIRST    6
#define STATE_READ_NEXT     7
#define STATE_READ_FINAL    8
#define STATE_READ_WAIT     9
#define TIVA_I2C_SIGNLE_SEND                (I2C_MCS_RUN | I2C_MCS_START | I2C_MCS_STOP)
#define TIVA_I2C_BURST_SEND_START           (I2C_MCS_RUN | I2C_MCS_START)
#define TIVA_I2C_BURST_SEND_CONTINUE        (I2C_MCS_RUN)
#define TIVA_I2C_BURST_SEND_FINISH          (I2C_MCS_RUN | I2C_MCS_STOP)
#define TIVA_I2C_BURST_SEND_STOP            (I2C_MCS_STOP)
#define TIVA_I2C_BURST_SEND_ERROR_STOP      (I2C_MCS_STOP)
#define TIVA_I2C_SINGLE_RECEIVE             (I2C_MCS_RUN | I2C_MCS_START | I2C_MCS_STOP)
#define TIVA_I2C_BURST_RECEIVE_START        (I2C_MCS_RUN | I2C_MCS_START | I2C_MCS_ACK)
#define TIVA_I2C_BURST_RECEIVE_CONTINUE     (I2C_MCS_RUN | I2C_MCS_ACK)
#define TIVA_I2C_BURST_RECEIVE_FINISH       (I2C_MCS_RUN | I2C_MCS_STOP)
#define TIVA_I2C_BURST_RECEIVE_ERROR_STOP   (I2C_MCS_STOP)
#define MTPR_VALUE          ((TIVA_SYSCLK/(2*(6+4)*i2cp->config->clock_speed))-1)

void i2c_lld_init(void) {

#if TIVA_I2C_USE_I2C0
  i2cObjectInit(&I2CD1);
  I2CD1.thread = NULL;
  I2CD1.i2c    = I2C0_BASE;
#endif /* TIVA_I2C_USE_I2C0 */

#if TIVA_I2C_USE_I2C1
  i2cObjectInit(&I2CD2);
  I2CD2.thread = NULL;
  I2CD2.i2c    = I2C1_BASE;
#endif /* TIVA_I2C_USE_I2C1 */

#if TIVA_I2C_USE_I2C2
  i2cObjectInit(&I2CD3);
  I2CD3.thread = NULL;
  I2CD3.i2c    = I2C2_BASE;
#endif /* TIVA_I2C_USE_I2C2 */

#if TIVA_I2C_USE_I2C3
  i2cObjectInit(&I2CD4);
  I2CD4.thread = NULL;
  I2CD4.i2c    = I2C3_BASE;
#endif /* TIVA_I2C_USE_I2C3 */

#if TIVA_I2C_USE_I2C4
  i2cObjectInit(&I2CD5);
  I2CD5.thread = NULL;
  I2CD5.i2c    = I2C4_BASE;
#endif /* TIVA_I2C_USE_I2C4 */

#if TIVA_I2C_USE_I2C5
  i2cObjectInit(&I2CD6);
  I2CD6.thread = NULL;
  I2CD6.i2c    = I2C5_BASE;
#endif /* TIVA_I2C_USE_I2C5 */

#if TIVA_I2C_USE_I2C6
  i2cObjectInit(&I2CD7);
  I2CD7.thread = NULL;
  I2CD7.i2c    = I2C6_BASE;
#endif /* TIVA_I2C_USE_I2C6 */

#if TIVA_I2C_USE_I2C7
  i2cObjectInit(&I2CD8);
  I2CD8.thread = NULL;
  I2CD8.i2c    = I2C7_BASE;
#endif /* TIVA_I2C_USE_I2C7 */

#if TIVA_I2C_USE_I2C8
  i2cObjectInit(&I2CD9);
  I2CD9.thread = NULL;
  I2CD9.i2c    = I2C8_BASE;
#endif /* TIVA_I2C_USE_I2C8 */

#if TIVA_I2C_USE_I2C9
  i2cObjectInit(&I2CD10);
  I2CD10.thread = NULL;
  I2CD10.i2c    = I2C9_BASE;
#endif /* TIVA_I2C_USE_I2C9 */
}

void i2c_lld_start(I2CDriver *i2cp)
{
  uint32_t i2c = i2cp->i2c;

  /* If in stopped state then enables the I2C clocks.*/
  if (i2cp->state == I2C_STOP) {
#if TIVA_I2C_USE_I2C0
    if (&I2CD1 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) |= (1 << 0);

      while (!(HWREG(SYSCTL_PRI2C) & (1 << 0)))
        ;

      nvicEnableVector(TIVA_I2C0_NUMBER, TIVA_I2C_I2C0_IRQ_PRIORITY);
    }
#endif /* TIVA_I2C_USE_I2C0 */

#if TIVA_I2C_USE_I2C1
    if (&I2CD2 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) |= (1 << 1);

      while (!(HWREG(SYSCTL_PRI2C) & (1 << 1)))
        ;

      nvicEnableVector(TIVA_I2C1_NUMBER, TIVA_I2C_I2C1_IRQ_PRIORITY);
    }
#endif /* TIVA_I2C_USE_I2C1 */

#if TIVA_I2C_USE_I2C2
    if (&I2CD3 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) |= (1 << 2);

      while (!(HWREG(SYSCTL_PRI2C) & (1 << 2)))
        ;

      nvicEnableVector(TIVA_I2C2_NUMBER, TIVA_I2C_I2C2_IRQ_PRIORITY);
    }
#endif /* TIVA_I2C_USE_I2C2 */

#if TIVA_I2C_USE_I2C3
    if (&I2CD4 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) |= (1 << 3);

      while (!(HWREG(SYSCTL_PRI2C) & (1 << 3)))
        ;

      nvicEnableVector(TIVA_I2C3_NUMBER, TIVA_I2C_I2C3_IRQ_PRIORITY);
    }
#endif /* TIVA_I2C_USE_I2C3 */

#if TIVA_I2C_USE_I2C4
    if (&I2CD5 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) |= (1 << 4);

      while (!(HWREG(SYSCTL_PRI2C) & (1 << 4)))
        ;

      nvicEnableVector(TIVA_I2C4_NUMBER, TIVA_I2C_I2C4_IRQ_PRIORITY);
    }
#endif /* TIVA_I2C_USE_I2C4 */

#if TIVA_I2C_USE_I2C5
    if (&I2CD6 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) |= (1 << 5);

      while (!(HWREG(SYSCTL_PRI2C) & (1 << 5)))
        ;

      nvicEnableVector(TIVA_I2C5_NUMBER, TIVA_I2C_I2C5_IRQ_PRIORITY);
    }
#endif /* TIVA_I2C_USE_I2C5 */

#if TIVA_I2C_USE_I2C6
    if (&I2CD7 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) |= (1 << 6);

      while (!(HWREG(SYSCTL_PRI2C) & (1 << 6)))
        ;

      nvicEnableVector(TIVA_I2C6_NUMBER, TIVA_I2C_I2C6_IRQ_PRIORITY);
    }
#endif /* TIVA_I2C_USE_I2C6 */

#if TIVA_I2C_USE_I2C7
    if (&I2CD8 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) |= (1 << 7);

      while (!(HWREG(SYSCTL_PRI2C) & (1 << 7)))
        ;

      nvicEnableVector(TIVA_I2C7_NUMBER, TIVA_I2C_I2C7_IRQ_PRIORITY);
    }
#endif /* TIVA_I2C_USE_I2C7 */

#if TIVA_I2C_USE_I2C8
    if (&I2CD9 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) |= (1 << 8);

      while (!(HWREG(SYSCTL_PRI2C) & (1 << 8)))
        ;

      nvicEnableVector(TIVA_I2C8_NUMBER, TIVA_I2C_I2C8_IRQ_PRIORITY);
    }
#endif /* TIVA_I2C_USE_I2C7 */

#if TIVA_I2C_USE_I2C9
    if (&I2CD10 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) |= (1 << 9);

      while (!(HWREG(SYSCTL_PRI2C) & (1 << 9)))
        ;

      nvicEnableVector(TIVA_I2C9_NUMBER, TIVA_I2C_I2C9_IRQ_PRIORITY);
    }
#endif /* TIVA_I2C_USE_I2C7 */
  }

  HWREG(i2c + I2C_O_MCR) = 0x10;
  HWREG(i2c + I2C_O_MTPR) = MTPR_VALUE;
}

void i2c_lld_stop(I2CDriver *i2cp)
{
  uint32_t i2c = i2cp->i2c;

  /* If not in stopped state then disables the I2C clock.*/
  if (i2cp->state != I2C_STOP) {

    /* I2C disable.*/
    // TODO: abort i2c operation
    //i2c_lld_abort_operation(i2cp);

#if TIVA_I2C_USE_I2C0
    if (&I2CD1 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) &= ~(1 << 0);
      nvicDisableVector(TIVA_I2C0_NUMBER);
    }
#endif /* TIVA_I2C_USE_I2C0 */

#if TIVA_I2C_USE_I2C1
    if (&I2CD2 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) &= ~(1 << 1);
      nvicDisableVector(TIVA_I2C1_NUMBER);
    }
#endif /* TIVA_I2C_USE_I2C1 */

#if TIVA_I2C_USE_I2C2
    if (&I2CD3 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) &= ~(1 << 2);
      nvicDisableVector(TIVA_I2C2_NUMBER);
    }
#endif /* TIVA_I2C_USE_I2C2 */

#if TIVA_I2C_USE_I2C3
    if (&I2CD4 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) &= ~(1 << 3);
      nvicDisableVector(TIVA_I2C3_NUMBER);
    }
#endif /* TIVA_I2C_USE_I2C3 */

#if TIVA_I2C_USE_I2C4
    if (&I2CD5 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) &= ~(1 << 4);
      nvicDisableVector(TIVA_I2C4_NUMBER);
    }
#endif /* TIVA_I2C_USE_I2C4 */

#if TIVA_I2C_USE_I2C5
    if (&I2CD6 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) &= ~(1 << 5);
      nvicDisableVector(TIVA_I2C5_NUMBER);
    }
#endif /* TIVA_I2C_USE_I2C5 */

#if TIVA_I2C_USE_I2C6
    if (&I2CD7 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) &= ~(1 << 6);
      nvicDisableVector(TIVA_I2C6_NUMBER);
    }
#endif /* TIVA_I2C_USE_I2C6 */

#if TIVA_I2C_USE_I2C7
    if (&I2CD8 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) &= ~(1 << 7);
      nvicDisableVector(TIVA_I2C7_NUMBER);
    }
#endif /* TIVA_I2C_USE_I2C7 */

#if TIVA_I2C_USE_I2C8
    if (&I2CD9 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) &= ~(1 << 8);
      nvicDisableVector(TIVA_I2C8_NUMBER);
    }
#endif /* TIVA_I2C_USE_I2C8 */

#if TIVA_I2C_USE_I2C9
    if (&I2CD10 == i2cp) {
      HWREG(SYSCTL_RCGCI2C) &= ~(1 << 9);
      nvicDisableVector(TIVA_I2C9_NUMBER);
    }
#endif /* TIVA_I2C_USE_I2C9 */

  HWREG(i2c + I2C_O_MCR) = 0;
  HWREG(i2c + I2C_O_MTPR) = 0;
  }
}

msg_t i2c_lld_master_receive_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                     uint8_t *rxbuf, size_t rxbytes,
                                     systime_t timeout)
{
  uint32_t i2c = i2cp->i2c;
  systime_t start, end;

  i2cp->rxbuf = rxbuf;
  i2cp->rxbytes = rxbytes;

  /* Resetting error flags for this transfer.*/
  i2cp->errors = I2C_NO_ERROR;

  /* Initializes driver fields, LSB = 1 -> receive.*/
  i2cp->addr = (addr << 1) | 0x01;

  /* Releases the lock from high level driver.*/
  osalSysUnlock();

  /* Calculating the time window for the timeout on the busy bus condition.*/
  start = osalOsGetSystemTimeX();
  end = start + OSAL_MS2ST(TIVA_I2C_BUSY_TIMEOUT);

  /* Waits until BUSY flag is reset or, alternatively, for a timeout
     condition.*/
  while (true) {
    osalSysLock();

    /* If the bus is not busy then the operation can continue, note, the
       loop is exited in the locked state.*/
    if ((HWREG(i2c + I2C_O_MCS) & I2C_MCS_BUSY) == 0)
      break;

    /* If the system time went outside the allowed window then a timeout
       condition is returned.*/
    if (!osalOsIsTimeWithinX(osalOsGetSystemTimeX(), start, end))
      return MSG_TIMEOUT;

    osalSysUnlock();
  }

  /* set slave address */
  HWREG(i2c + I2C_O_MSA) = addr;

  /* Starts the operation.*/
  HWREG(i2c + I2C_O_MCS) = TIVA_I2C_SINGLE_RECEIVE;

  /* Waits for the operation completion or a timeout.*/
  return osalThreadSuspendTimeoutS(&i2cp->thread, timeout);
}

msg_t i2c_lld_master_transmit_timeout(I2CDriver *i2cp, i2caddr_t addr,
                                      const uint8_t *txbuf, size_t txbytes,
                                      uint8_t *rxbuf, size_t rxbytes,
                                      systime_t timeout)
{
  uint32_t i2c = i2cp->i2c;
  systime_t start, end;

  i2cp->rxbuf = rxbuf;
  i2cp->rxbytes = rxbytes;
  i2cp->txbuf = txbuf;
  i2cp->txbytes = txbytes;

  /* Resetting error flags for this transfer.*/
  i2cp->errors = I2C_NO_ERROR;

  /* Releases the lock from high level driver.*/
  osalSysUnlock();

  /* Calculating the time window for the timeout on the busy bus condition.*/
  start = osalOsGetSystemTimeX();
  end = start + OSAL_MS2ST(TIVA_I2C_BUSY_TIMEOUT);

  /* Waits until BUSY flag is reset or, alternatively, for a timeout
     condition.*/
  while (true) {
    osalSysLock();

    /* If the bus is not busy then the operation can continue, note, the
       loop is exited in the locked state.*/
    if ((HWREG(i2c + I2C_O_MCS) & I2C_MCS_BUSY) == 0)
      break;

    /* If the system time went outside the allowed window then a timeout
       condition is returned.*/
    if (!osalOsIsTimeWithinX(osalOsGetSystemTimeX(), start, end))
      return MSG_TIMEOUT;

    osalSysUnlock();
  }

  /* Initializes driver fields, LSB = 0 -> write.*/
  i2cp->addr = addr << 1 | 0;

  /* set slave address */
  HWREG(i2c + I2C_O_MSA) = i2cp->addr;

  /* enable interrupts */
  HWREG(i2c + I2C_O_MIMR) = I2C_MIMR_IM;

  /* put data in register */
  HWREG(i2c + I2C_O_MDR) = *(i2cp->txbuf);

  /* check if 1 or more bytes */
  if (i2cp->txbytes == 1) {
    if (i2cp->rxbytes == 1) {
      // one byte read
      i2cp->intstate = STATE_READ_ONE;
    }
    else {
      // multiple byte read
      i2cp->intstate = STATE_READ_FIRST;
    }
    // single byte send
    HWREG(i2c + I2C_O_MCS) = TIVA_I2C_SIGNLE_SEND;
  }
  else {
    if (i2cp->txbytes == 2) {
      // 2 bytes
      i2cp->intstate = STATE_WRITE_FINAL;
    }
    else {
      // more then 2 bytes
      i2cp->intstate = STATE_WRITE_NEXT;
    }
    // multiple bytes start send
    HWREG(i2c + I2C_O_MCS) = TIVA_I2C_BURST_SEND_START;
  }

  i2cp->txbuf++;
  i2cp->txbytes--;

  /* Waits for the operation completion or a timeout.*/
  return osalThreadSuspendTimeoutS(&i2cp->thread, timeout);
}
